latex2mmlc/tests/snapshots/wiki_test__wiki031.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "+, -, \\pm, \\mp, \\dotplus"
---
<math>
    <mo>+</mo>
    <mo>,</mo>
    <mo>−</mo>
    <mo>,</mo>
    <mo>±</mo>
    <mo>,</mo>
    <mo>∓</mo>
    <mo>,</mo>
    <mo>∔</mo>
</math>
