latex2mmlc/tests/snapshots/wiki_test__wiki032.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\times, \\div, \\divideontimes, /, \\backslash"
---
<math>
    <mo>×</mo>
    <mo>,</mo>
    <mo form="prefix">÷</mo>
    <mo>,</mo>
    <mo>⋇</mo>
    <mo>,</mo>
    <mi>/</mi>
    <mo>,</mo>
    <mi>\</mi>
</math>
