latex2mmlc/tests/snapshots/wiki_test__wiki034.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\boxplus, \\boxminus, \\boxtimes, \\boxdot"
---
<math>
    <mo>⊞</mo>
    <mo>,</mo>
    <mo>⊟</mo>
    <mo>,</mo>
    <mo>⊠</mo>
    <mo>,</mo>
    <mo>⊡</mo>
</math>
