latex2mmlc/tests/snapshots/wiki_test__wiki035.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\oplus, \\ominus, \\otimes, \\oslash, \\odot"
---
<math>
    <mo>⊕</mo>
    <mo>,</mo>
    <mo>⊖</mo>
    <mo>,</mo>
    <mo>⊗</mo>
    <mo>,</mo>
    <mo>⊘</mo>
    <mo>,</mo>
    <mo>⊙</mo>
</math>
