latex2mmlc/tests/snapshots/wiki_test__wiki036.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\circleddash, \\circledcirc, \\circledast"
---
<math>
    <mo>⊝</mo>
    <mo>,</mo>
    <mo>⊚</mo>
    <mo>,</mo>
    <mo>⊛</mo>
</math>
