latex2mmlc/tests/snapshots/wiki_test__wiki037.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\bigoplus, \\bigotimes, \\bigodot"
---
<math>
    <mo>⨁</mo>
    <mo>,</mo>
    <mo>⨂</mo>
    <mo>,</mo>
    <mo>⨀</mo>
</math>
