latex2mmlc/tests/snapshots/wiki_test__wiki039.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\in, \\notin \\not\\in, \\ni, \\not\\ni"
---
<math>
    <mo>∈</mo>
    <mo>,</mo>
    <mo>∉</mo>
    <mo>∉</mo>
    <mo>,</mo>
    <mo>∋</mo>
    <mo>,</mo>
    <mo>∋</mo>
</math>
